--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -36,7 +36,7 @@ nav {
 nav a {
 	top: 16px;
     height: 25.5px;
-    line-height: 1.2;
+    line-height: 1.1;
     position: relative;
 	font-family: "Caveat Brush", serif;
 	text-decoration: none;
@@ -47,7 +47,7 @@ nav a {
 	letter-spacing: 1px;
     margin: 0px 16px;
     padding: 2px 8px;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     font-weight: normal;
     color: black;
 }
@@ -426,17 +426,38 @@ footer .terms {
 /* MEDIA QUERIES */
 
   /* HEADER DESKTOP MQ */
+/* header desktop 1219px mq */
+@media only screen and (max-width: 1219px) {
+
+header {
+	font-size: 1.7rem;
+}
+
+header div {
+	line-height: 2.6;
+}
+
+header div .logo { 
+	height: 3.4rem;
+}
+header nav a {
+	top: 17px;
+	height: 24px;
+	line-height: 1.1;
+	font-size: 1.3rem;
+ }
+}
 /* header (tablet size) 880px min mq */
 @media only screen and (min-width: 880px) {
 
-nav.mobile-nav-container {
+header nav.mobile-nav-container {
 	display: none;
  }
 }
 /* header (tablet size) 880px mq */
 @media only screen and (max-width: 880px) {
 
-nav.desktop {
+header nav.desktop {
 	display: none;
 }  
 
@@ -444,19 +465,19 @@ header div {
 	display: none;
 }
 
-nav.mobile-nav-container {
+header nav.mobile-nav-container {
 	display: flex;
 	width: 100%;
 	justify-content: space-evenly;
 }
 
-nav.mobile-nav-container a {
+header nav.mobile-nav-container a {
 	margin-top: -7px;
     padding-top: 4px; 
 	height: 26px;
 }
 
-nav.mobile-nav-container a:first-child img {
+header nav.mobile-nav-container a:first-child img {
     margin-top: -2px;
  }
 }
@@ -472,6 +493,21 @@ nav.mobile-nav-container a:first-child img {
 	margin-top: 3px;
  }
 }
+/* top-banner desktop 1219px mq */
+@media only screen and (max-width: 1219px) {
+
+.top-banner section {
+	margin-top: 16px;
+}
+
+.top-banner h1 {
+	font-size: 3.4rem;
+}
+.top-banner .button {
+	padding: 13px 0px;
+	font-size: 1.3rem;
+ }
+}
 /* top-banner (tablet size) 1099px mq */
 @media only screen and (max-width: 1099px) {
 
@@ -485,6 +521,14 @@ nav.mobile-nav-container a:first-child img {
 	letter-spacing: 1.8px
  }
 }
+/* top-banner (tablet size) 1007px mq */
+@media only screen and (max-width: 1007px) {
+
+.top-banner h3 {
+    font-size: 1.1rem;
+ }
+}
+
 /* top-banner (tablet size) 880px mq */
 @media only screen and (max-width: 880px) {
 
@@ -679,6 +723,7 @@ nav.mobile-nav-container a:first-child img {
 
 .main-content .info-images section {
 	display: flex;
+	font-size: 1rem;
 	justify-content: space-evenly;
 	text-align: center;
 	padding-top: -16px;
@@ -698,7 +743,7 @@ nav.mobile-nav-container a:first-child img {
 /* main-content info-images (tablet size) 825px mq */
 @media only screen and (max-width: 825px) {
 
-.main-content .info-images span {
+.main-content .info-images section {
 	font-size: 1rem;
 }
 
@@ -991,7 +1036,13 @@ footer div {
     font-size: 0.6rem;
  }
 }
+/* footer (tablet size) 880px mq */
+@media only screen and (max-width: 880px) {
 
+footer div {
+	font-size: 0.7rem;
+ }
+}
   /* FOOTER MOBILE MQ */
 /* footer mobile mq 480px */
 @media only screen and (max-width: 480px) {
@@ -999,6 +1050,10 @@ footer div {
 footer {
 	justify-content: center;
 	margin-left: 0;
+}
+
+footer div {
+	font-size: 0.6rem;
 }
 
 footer .terms {
