--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -470,17 +470,68 @@ header nav.mobile-nav-container {
 }
 
 header nav.mobile-nav-container a {
-	margin-top: -7px;
+	margin-top: -4px;
     padding-top: 4px; 
-	height: 26px;
+	height: 31px;
+	width: 24px;
 }
 
 header nav.mobile-nav-container a:first-child img {
-    margin-top: -2px;
+    margin-top: -1px;  
+    margin-left: -2.2px;
+    height: 2.1rem;
  }
+
+header nav.mobile-nav-container a:nth-child(2) img {
+    padding-top: 2.7px;
+}
+
+header nav.mobile-nav-container a:nth-child(3) img {
+	padding-top: 2.7px;
+	margin-left: -2.5px;
 }
 
 
+
+
+
+
+}
+/* header mobile 480px mq */
+@media only screen and (max-width: 480px) {
+
+header nav.mobile-nav-container a {
+    margin-top: -2px;
+    padding-top: 6px; 
+    height: 26px;  
+    width: 19px;
+}
+
+header nav.mobile-nav-container img {
+	height: 1.4rem;
+	margin-left: -3px;
+}
+
+header nav.mobile-nav-container a:first-child img {
+	height: 1.8rem;
+    margin-top: -2px;
+    margin-right: 0.2px;
+}
+
+header nav.mobile-nav-container a:nth-child(2) img {
+	padding-top: 0.8px;
+    margin-left: -0.2px;
+}
+
+header nav.mobile-nav-container a:nth-child(3) img {
+	padding-top: 0.5px;
+}
+
+header nav.mobile-nav-container a:last-child img {
+    margin-top: -1px;
+    margin-left: -1.4px;
+ }
+}
   
   
   /* TOP-BANNER DESKTOP MQ */
@@ -518,7 +569,7 @@ header nav.mobile-nav-container a:first-child img {
  }
 }
 /* top-banner (tablet size) 1007px mq */
-@media only screen and (max-width: 1005px) {
+@media only screen and (max-width: 1007px) {
 
 .top-banner h3 {
     font-size: 1.1rem;
@@ -645,7 +696,7 @@ header nav.mobile-nav-container a:first-child img {
  }
 }
 /* main-content info-images (tablet size) 1007px mq */
-@media only screen and (max-width: 1005px) { 
+@media only screen and (max-width: 1007px) { 
 
 .main-content .top-section p {
 	font-size: 0.9rem;
@@ -846,7 +897,7 @@ header nav.mobile-nav-container a:first-child img {
  }
 }
 /* main-section Careers (tablet size) 1007px mq */
-@media only screen and (max-width: 1005px) {
+@media only screen and (max-width: 1007px) {
 
 .Careers .Boxes h3 {
 	font-size: 1.6rem;
@@ -969,7 +1020,7 @@ header nav.mobile-nav-container a:first-child img {
  }
 }
 /* Thesis-content (tablet size) 1007px mq */
-@media only screen and (max-width: 1005px) {
+@media only screen and (max-width: 1007px) {
 
 .Thesis-content .top-section h3 {
 	font-size: 1..6rem;
@@ -1033,7 +1084,7 @@ header nav.mobile-nav-container a:first-child img {
 
   /* FOOTER TABLET SIZE MQ */
 /* footer (tablet size) 1007px mq */
-@media only screen and (max-width: 1005px) {
+@media only screen and (max-width: 1007px) {
 
 footer div {
     font-size: 0.6rem;
