--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -697,7 +697,7 @@ header nav.mobile-nav-container a:first-child img {
 
 .main-content .info-images h3 {
 	font-size: 1.6rem;
- }
+}
 
 .main-content .info-images a {
 	font-size: 1rem;
@@ -720,7 +720,7 @@ header nav.mobile-nav-container a:first-child img {
 
 .main-content .info-images {
     width: 100%;
-    margin: 16px 0px 0px 0px;
+    margin-left: 0;
 }
 
 .main-content .info-images div {
@@ -737,30 +737,50 @@ header nav.mobile-nav-container a:first-child img {
 
 .main-content .info-images div:first-child section {
 	width: 100%;
-	margin: 37px 0px 21px 0px;
+	margin: 37px 0px 21px 7px;
+}
+
+.main-content .info-images div:first-child h3 {
+	margin-bottom: 11px;
+}
+
+.main-content .info-images div:first-child a {
+	margin-left: -12px;
 }
 
 .main-content .info-images div:nth-child(even) section {
 	width: 100%;
-	margin-left: 0; 
 	margin-top: 32px;
+	margin-left: 11px;
+}
+
+.main-content .info-images div:nth-child(even) h3 {
+	margin-left: 0px;
+}
+
+.main-content .info-images div:nth-child(even) a {
+	margin-left: -7px;
 }
 
 .main-content .info-images div:last-child section {
 	width: 100%;
 	background-size: cover;
 	margin-top: 32px;
-	margin-left: 0px;
 }
 
 .main-content .info-images div:last-child h3 {
-	margin-left: 3px;
+	margin-left: -6px;
 }
+
+.main-content .info-images div:last-child a {
+	margin-left: -28px;
+}
+
 .main-content .info-images img {
 	display: block;
+	margin: auto;
 	height: auto;
 	width: auto;
-	margin: auto;
 	border-radius: 20px;
 }
 
@@ -776,7 +796,7 @@ header nav.mobile-nav-container a:first-child img {
 .main-content .info-images h3 {
 	font-weight: normal;
 	font-size: 1.6rem;
- }
+}
 
 .main-content .info-images a {
 	font-size: 1.2rem;
@@ -788,10 +808,6 @@ header nav.mobile-nav-container a:first-child img {
 
 .main-content .info-images section {
 	font-size: 1rem;
-}
-
-.main-content .info-images div:last-child section {
-	margin-top: 37px;
  }
 }
   /* MAIN-CONTENT MOBILE MQ */
@@ -814,7 +830,7 @@ header nav.mobile-nav-container a:first-child img {
 	width: 98%;
 	height: auto;
     border: solid 4px #d3d3d3;
- }
+}
 
 .main-content .mobile-images section {
     text-align: center;
@@ -828,13 +844,13 @@ header nav.mobile-nav-container a:first-child img {
     margin-bottom: 10px;
     font-weight: normal;
     font-size: 1.5rem;
- }
+}
 
 .main-content .mobile-images span{
 	margin-bottom: 18px;
 	letter-spacing: 0.8px;
 	font-size: 1rem;
- }	
+}	
 
 .main-content .mobile-images a {
 	color: black;
@@ -850,7 +866,7 @@ header nav.mobile-nav-container a:first-child img {
     font-weight: bold;
     text-shadow: 2px 2px black;
     transition: color 250ms ease-in-out, text-shadow 350ms ease-in-out;  
- }
+}
 
 .main-content .mobile-images div:last-child section {
 	margin-bottom: 18px;
@@ -915,7 +931,7 @@ header nav.mobile-nav-container a:first-child img {
 
 .Careers h2 {
 	font-size: 2.9rem;
-	margin: 1px 0px 43px 0px;
+	margin: 0px 0px 43px 0px;
 }
 
 .Careers .Boxes {
@@ -1051,6 +1067,7 @@ header nav.mobile-nav-container a:first-child img {
 .title h2 {
 	font-size: 2.9rem;
 	margin-bottom: 18px;
+	margin-top: -16px;
 }
 
 .Thesis-content {
