update 98 capstone mq

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -45,7 +45,7 @@ nav a {
 	text-decoration: none;
 	text-shadow: 2px 2px #ffffff;
     background-color: #fafad2;
-    border: solid 2px black;
+    border: solid 2px red;
     border-radius: 20px;
 	letter-spacing: 0.8px;
 	word-spacing: 1px;
