--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -39,7 +39,7 @@ nav {
 nav a {
 	top: 16px;
     height: 25.5px;
-    line-height: 1.1;
+    line-height: 1.3;
     position: relative;
 	font-family: "Caveat Brush", serif;
 	text-decoration: none;
@@ -51,7 +51,7 @@ nav a {
 	word-spacing: 1px;
     margin: 0px 16px;
     padding: 2px 8px;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     font-weight: normal;
     color: black;
 }
@@ -77,7 +77,7 @@ nav a:hover {
 	border-radius: 20px;
 }
 .top-banner section  {
-    margin-top: 70px;
+    margin-top: 60px;
     margin-right: 48px;
 }
 .top-banner h1 {
@@ -110,7 +110,7 @@ nav a:hover {
     letter-spacing: 2px;
 	border-radius: 30px;
     background-color: #ffffff;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
 }
 .top-banner .button:hover {
 	background-color: #ffff33;
@@ -396,9 +396,6 @@ nav a:hover {
     border-top: none;
     border-bottom: none;
 }
-.Thesis-content .images div:first-child section {
-	margin-top: 15px;
-}
 .Thesis-content .images div:last-child section {
     margin-top: 25px;
 }
@@ -428,7 +425,9 @@ footer .terms {
 	letter-spacing: 0.5px;
 	margin-right: 48px;
 }
-
+footer i {
+	margin-left: -320px;
+}
 
 
 
@@ -522,14 +521,14 @@ header nav.mobile-nav-container a:first-child img {
 @media only screen and (max-width: 1290px) {
 
 .top-banner section {
-	margin-top: 3px;
+	margin-top: 20px;
  }
 }
 /* top-banner desktop 1219px mq */
 @media only screen and (max-width: 1219px) {
 
 .top-banner section {
-	margin-top: 16px;
+	margin-top: 18px;
 }
 
 .top-banner h1 {
@@ -737,7 +736,7 @@ header nav.mobile-nav-container a:first-child img {
 
 .main-content .info-images div:first-child section {
 	width: 100%;
-	margin: 37px 0px 21px 7px;
+	margin: 32px 0px 21px 7px;
 }
 
 .main-content .info-images div:first-child h3 {
@@ -1007,10 +1006,10 @@ header nav.mobile-nav-container a:first-child img {
 
   /* THESIS-CONTENT DESKTOP MQ */
 /* thesis content desktop 1362 mq */
-@media only screen and (max-width: 1362px) {
+@media only screen and (max-width: 1270px) {
 
 .Thesis-content .images div:first-child section {
-	 margin-top: -8px;
+	margin-top: -8px;
  }
 }
 /* thesis-content desktop 1219px mq */
