--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -57,7 +57,7 @@ nav a {
 }
 nav a:hover {
 	background-color: #ffff33;
-    box-shadow: 6px 6px 10px black;
+    box-shadow: -6px 6px 10px black;
     transition: background-color 550ms ease-out, box-shadow 550ms ease-out;
 }
 
@@ -114,7 +114,7 @@ nav a:hover {
 }
 .top-banner .button:hover {
 	background-color: #ffff33;
-	box-shadow: 12px 12px 20px black;
+	box-shadow: -12px 12px 20px black;
 	transition: box-shadow 550ms ease-out, background-color 550ms ease-out;
 }
 .top-banner .button a {
@@ -194,7 +194,9 @@ nav a:hover {
 }
 .main-content .info-images div:last-child {
     padding-top: 16px;
+    border: solid 1px #d3d3d3;
     background-color: #fafad2;
+    box-shadow: -10px 10px 15px black;
 }
 .main-content .info-images img {
 	width: 35%;
@@ -278,7 +280,7 @@ nav a:hover {
     border: solid 4px #d3d3d3;
     margin: 0px 17px 40px 17px;
     font-family: "Kreon", serif;
-    box-shadow: 15px 15px 15px black;
+    box-shadow: -10px 10px 15px black;
     border-radius: 24px;
     height: auto;
     width: 26%;
@@ -390,8 +392,8 @@ nav a:hover {
 	line-height: 1.2;
 }
 .Thesis-content .images div:first-child {
-    border-top: none;
-    border-bottom: none;
+    border: solid 1px #d3d3d3;
+    box-shadow: -10px 10px 15px black;
 }
 .Thesis-content .images div:last-child section {
     margin-top: 25px;
