--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,7 +13,7 @@ header {
 	width: 100%;
 	height: 64px;
     font-size: 1.8rem;
-    font-weight: bold;
+    font-weight: normal;
     font-family: "Josefin Sans", serif;
     justify-content: space-between;
 }
