--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,7 +13,7 @@ header {
 	width: 100%;
 	height: 64px;
     font-size: 1.8rem;
-    font-weight: normal;
+    font-weight: bold;
     font-family: "Josefin Sans", serif;
     justify-content: space-between;
 }
@@ -37,9 +37,9 @@ nav {
 	margin-right: 9px;
 }
 nav a {
-	top: 14px;
-    height: 28px;
-    line-height: 1.4;
+	top: 16px;
+    height: 25.5px;
+    line-height: 1.1;
     position: relative;
 	font-family: "Caveat Brush", serif;
 	text-decoration: none;
@@ -51,13 +51,13 @@ nav a {
 	word-spacing: 1px;
     margin: 0px 16px;
     padding: 2px 8px;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-weight: normal;
     color: black;
 }
 nav a:hover {
 	background-color: #ffff33;
-    box-shadow: -6px 6px 10px black;
+    box-shadow: 6px 6px 10px black;
     transition: background-color 550ms ease-out, box-shadow 550ms ease-out;
 }
 
@@ -77,7 +77,7 @@ nav a:hover {
 	border-radius: 20px;
 }
 .top-banner section  {
-    margin-top: 60px;
+    margin-top: 70px;
     margin-right: 48px;
 }
 .top-banner h1 {
@@ -110,11 +110,11 @@ nav a:hover {
     letter-spacing: 2px;
 	border-radius: 30px;
     background-color: #ffffff;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
 }
 .top-banner .button:hover {
 	background-color: #ffff33;
-	box-shadow: -12px 12px 20px black;
+	box-shadow: 12px 12px 20px black;
 	transition: box-shadow 550ms ease-out, background-color 550ms ease-out;
 }
 .top-banner .button a {
@@ -195,7 +195,6 @@ nav a:hover {
 .main-content .info-images div:last-child {
     padding-top: 16px;
     background-color: #fafad2;
-    box-shadow: -10px 10px 15px black;
 }
 .main-content .info-images img {
 	width: 35%;
@@ -279,7 +278,7 @@ nav a:hover {
     border: solid 4px #d3d3d3;
     margin: 0px 17px 40px 17px;
     font-family: "Kreon", serif;
-    box-shadow: -10px 10px 15px black;
+    box-shadow: 15px 15px 15px black;
     border-radius: 24px;
     height: auto;
     width: 26%;
@@ -391,7 +390,11 @@ nav a:hover {
 	line-height: 1.2;
 }
 .Thesis-content .images div:first-child {
-    box-shadow: -10px 10px 15px black;
+    border-top: none;
+    border-bottom: none;
+}
+.Thesis-content .images div:first-child section {
+	margin-top: 15px;
 }
 .Thesis-content .images div:last-child section {
     margin-top: 25px;
@@ -422,15 +425,13 @@ footer .terms {
 	letter-spacing: 0.5px;
 	margin-right: 48px;
 }
-
 footer .icons {
 	margin-top: -3px;
-    margin-left: -170px;
+    margin-left: -100px;
 }
 footer .icons i {
     padding: 0px 25px;
 }
-
 
 
 
@@ -525,14 +526,14 @@ header nav.mobile-nav-container a:first-child img {
 @media only screen and (max-width: 1290px) {
 
 .top-banner section {
-	margin-top: 20px;
+	margin-top: 3px;
  }
 }
 /* top-banner desktop 1219px mq */
 @media only screen and (max-width: 1219px) {
 
 .top-banner section {
-	margin-top: 18px;
+	margin-top: 16px;
 }
 
 .top-banner h1 {
@@ -740,7 +741,7 @@ header nav.mobile-nav-container a:first-child img {
 
 .main-content .info-images div:first-child section {
 	width: 100%;
-	margin: 32px 0px 21px 7px;
+	margin: 37px 0px 21px 7px;
 }
 
 .main-content .info-images div:first-child h3 {
@@ -1010,10 +1011,10 @@ header nav.mobile-nav-container a:first-child img {
 
   /* THESIS-CONTENT DESKTOP MQ */
 /* thesis content desktop 1362 mq */
-@media only screen and (max-width: 1270px) {
+@media only screen and (max-width: 1362px) {
 
 .Thesis-content .images div:first-child section {
-	margin-top: -8px;
+	 margin-top: -8px;
  }
 }
 /* thesis-content desktop 1219px mq */
