--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -68,9 +68,10 @@ nav a:hover {
 	display: flex;
     background-color: #FAFAD2;
     height: 100%;
+    width: 100%;
 }
 .top-banner img {
-	height: 500px;
+	height: 500%;
 	width: 57.5%;
 	margin: 32px 48px 32px 24px; 
 	border: solid 4px #d3d3d3;
@@ -135,6 +136,7 @@ nav a:hover {
 }
 .main-content .top-section img {
     width: 100%;
+    height: auto;
     margin-top: 32px;
     margin-bottom: 20px;
     border: solid 4px #d3d3d3;
@@ -156,8 +158,7 @@ nav a:hover {
 	line-height: 1.4;
 	letter-spacing: 0.8px;
 	word-spacing: 2px; 
-	margin-top: -24px;
-	margin-bottom: 44px;
+	margin-top: -10px;
 	font-weight: normal;
 }
 .main-content .top-section div {
@@ -198,7 +199,7 @@ nav a:hover {
 }
 .main-content .info-images img {
 	width: 35%;
-	height: 11.1rem;
+	height: 85%;
 	border: solid 4px #d3d3d3;
 	border-radius: 20px;
 	margin-bottom: 22px;
@@ -544,19 +545,52 @@ header nav.mobile-nav-container a:first-child img {
 	font-size: 1.3rem;
  }
 }
-/* top-banner (tablet size) 1099px mq */
-@media only screen and (max-width: 1099px) {
+/* top-banner (tablet size) 1099px mq */      
+@media only screen and (max-width: 1099px) {   /*first*/
+
+.top-banner section {
+	margin-top: 16px;
+}
+
+.top-banner h1 {
+	font-size: 3rem;
+}
 
 .top-banner h3 {
-	font-size: 1.3rem;
+	font-size: 1.1rem;
 	letter-spacing: 1.3px;
+ }
+
+.top-banner .button {
+    padding: 11px 0px;
+ }
+
+.top-banner .button a {
+	font-size: 1.2rem;
  }
 }
 /* top-banner (tablet size) 1007px mq */
-@media only screen and (max-width: 1007px) {
+@media only screen and (max-width: 1007px) { /* second*/
+
+.top-banner h1 {
+	font-size: 2.7rem;
+}
 
 .top-banner h3 {
-    font-size: 1.1rem;
+    font-size: 0.9rem;
+    letter-spacing: 1.3px;
+ }
+
+.top-banner .button {
+	left: 5%;
+	width: 80%;
+	position: relative;
+	margin-right: 0px;
+	padding: 9px 0px;
+ }
+
+.top-banner .button a {
+	font-size: 1.1rem;
  }
 }
 
