--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,6 +6,10 @@ body {
 	overflow-x: hidden;
 }
 
+.main-container {
+	margin: auto;
+	max-width: 98%;
+}
 
 /* header */
 header {
@@ -19,7 +23,6 @@ header {
 }
 header div {
 	line-height: 2.4;
-    margin-left: 17px;
 }
 header div span {
 	letter-spacing: 2px;
@@ -34,7 +37,6 @@ header span {
 }
 nav {
 	display: flex;
-	margin-right: 9px;
 }
 nav a {
 	top: 16px;
@@ -49,7 +51,7 @@ nav a {
     border-radius: 20px;
 	letter-spacing: 0.8px;
 	word-spacing: 1px;
-    margin: 0px 16px;
+    margin-left: 25px;
     padding: 2px 8px;
     font-size: 1.4rem;
     font-weight: normal;
@@ -73,7 +75,7 @@ nav a:hover {
 .top-banner img {
 	height: 500%;
 	width: 57.5%;
-	margin: 32px 48px 32px 24px; 
+	margin: 32px 48px 32px 0px; 
 	border: solid 4px #d3d3d3;
 	border-radius: 20px;
 }
@@ -131,7 +133,6 @@ nav a:hover {
 	display: flex;	
 }
 .main-content .top-section {
-	margin-left: 24px;
     width: 60%;
 }
 .main-content .top-section img {
@@ -333,7 +334,7 @@ nav a:hover {
 .Thesis-content .top-section {
 	width: 60%;
 	height: auto;
-	margin: 0px 32px 12px 24px;
+	margin: 0px 32px 12px 0px;
 }
 .Thesis-content .top-section h3 {
 	font-family: "Josefin Sans";
@@ -353,6 +354,7 @@ nav a:hover {
 .Thesis-content .top-section video {
 	height: auto;
 	width: 100%;
+	margin: auto;
 	border: solid 4px #d3d3d3;
 }
 .Thesis-content .images {
@@ -414,7 +416,7 @@ footer  {
 	display: flex;
 	font-family: "Kreon", serif;
 	justify-content: space-between;
-	margin: 16px 0px 32px 24px;
+	margin: 16px 0px 32px 0px;
 }
 footer div {
 	font-size: 0.8rem;	
@@ -491,6 +493,7 @@ header nav.mobile-nav-container a {
 	height: 35px;
 	width: 30px;
 	margin-top: -5px;
+	margin-left: 0px;
     padding-top: 4px; 
 	border-radius: 100%;
  }
